force-app/main/default/objects/Time_Entry__c/validationRules/Hours_Cannot_Exceed_24.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Cannot_Exceed_24</fullName>
    <active>true</active>
    <errorConditionFormula>Hours__c &gt; 24</errorConditionFormula>
    <errorDisplayField>Hours__c</errorDisplayField>
    <errorMessage>Cannot log more than 24 hours in a single entry.</errorMessage>
</ValidationRule>