force-app/main/default/objects/Time_Entry__c/validationRules/Hours_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Hours__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Hours__c</errorDisplayField>
    <errorMessage>Hours must be greater than zero.</errorMessage>
</ValidationRule>