force-app/main/default/objects/Time_Entry__c/listViews/All_Time_Entries.listView-meta.xml
<ListView>
    <fullName>All_Time_Entries</fullName>
    <label>All Time Entries</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Work_Item__c</columns>
    <columns>Hours__c</columns>
    <columns>Date__c</columns>
    <columns>Notes__c</columns>
</ListView>