force-app/main/default/objects/Time_Entry__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <label>This Week</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <columns>NAME</columns>
    <columns>Work_Item__c</columns>
    <columns>Hours__c</columns>
    <columns>Date__c</columns>
    <columns>Notes__c</columns>
</ListView>